# sustech_cs205_project4

./: CMakeLists.txt  README.md
demo/: demo.cpp
include/: imglib.h
report_pictures/: report.md
src/: image.cpp  image_decoder.cpp  image_io.cpp  mat.cpp  processor.cpp
submit/: CMakeLists.txt  demo.cpp  image.cpp  image_io.cpp  imglib.h  processor.cpp
